Fixed within image modal: arrows/exit buttons not showing on certain images, images without data-image-order not loading

--- a/_sass/dialog.scss
+++ b/_sass/dialog.scss
@@ -22,7 +22,7 @@
   align-items: center;
   
   img {
-    max-width: 90vw;
+    /* max-width: 90vw; */
     max-height: 90vh;
     border-radius: 0.5rem;
     border: none;
